ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
02/11/14 Daniel K. O.
         * Added dJointGetHinge2Angle2 (issue #12).

01/31/14 Daniel K. O.
        * Applied patch #185: Stable, implicit gyroscopic forces.

01/27/14 Daniel K. O.
        * Fixed cylinder AABB computation.

01/25/14 Daniel K. O.
        * Removed ALLOCA calls from dHashSpace; it should not depend
          on stack size limits anymore.

12/06/13 Daniel K. O.
        * Applied patch #181: fix some bugs in AMotor joint.
        * Applied patch #186: fix some bugs in PU joint.
        * Applied patch #182: Transmission joint.
        * Applied patch #184: implement rolling friction for contacts.

08/08/13 Oleh Derevenko
        * Joint feedback forces application fixed in QuickStep implementation
          (was broken since revision #1919 in old repository (#1927 in new one))

08/04/13 Oleh Derevenko
        * Bugfix #89 by Luc applied (dJointAddSliderForce() adds a zero force
          when the parent body is NULL) 

05/18/13 Oleh Derevenko
        * OU library has been included in ODE at revision #46 instead of  
          being used as an external link due to difficulties using external 
          references with new protocol used for storage at SF.

03/03/13 Oleh Derevenko
        * Fixed issue with "findex==-1" constraints being intermixed with 
          "findex!=-1" ones during constraints random reordering in QuickStep.

02/03/13 Oleh Derevenko
        * [u]int[8/16/32] renamed to contain "d" prefix so that global namespace
          was not polluted with these names unconditionally. 
          If your project depended on these types other than just for passing 